@@ -19,22 +19,22 @@ import java.util.List;
 /**
  *  | ID   | Severity | Rule                                                                  | Dependent On |
  *  |------|----------|-----------------------------------------------------------------------|--------------|
- *  | V224 | ERROR    | Final pct or Final Letter Grade should be included for completed      | V202, V218,  |
- *  |      |          | courses                                                               | V220         |
- *  |      |          | Future = Course Session < today's date                                |              |
+ *  | V219 | ERROR    | If course session is prior to 199409 no Final percent should be       |   V217       |
+ *                      entered for these courses.  This field should be blank.
+ *
  */
 @Component
 @Slf4j
-@Order(240)
-public class V224FinalLetterGradePercent implements CourseValidationBaseRule {
+@Order(190)
+public class V219FinalPercent implements CourseValidationBaseRule {
 
     @Override
     public boolean shouldExecute(StudentRuleData studentRuleData, List<CourseStudentValidationIssue> validationErrorsMap) {
-        log.debug("In shouldExecute of V224: for courseStudentID :: {}", studentRuleData.getCourseStudentEntity().getCourseStudentID());
+        log.debug("In shouldExecute of V219: for courseStudentID :: {}", studentRuleData.getCourseStudentEntity().getCourseStudentID());
 
-        var shouldExecute = isValidationDependencyResolved("V224", validationErrorsMap);
+        var shouldExecute = isValidationDependencyResolved("V219", validationErrorsMap);
 
-        log.debug("In shouldExecute of V224: Condition returned - {} for courseStudentID :: {}" ,
+        log.debug("In shouldExecute of V219: Condition returned - {} for courseStudentID :: {}" ,
                 shouldExecute,
                 studentRuleData.getCourseStudentEntity().getCourseStudentID());
 
@@ -44,24 +44,25 @@ public class V224FinalLetterGradePercent implements CourseValidationBaseRule {
     @Override
     public List<CourseStudentValidationIssue> executeValidation(StudentRuleData studentRuleData) {
         var student = studentRuleData.getCourseStudentEntity();
-        log.debug("In executeValidation of V224 for courseStudentID :: {}", student.getCourseStudentID());
+        log.debug("In executeValidation of V219 for courseStudentID :: {}", student.getCourseStudentID());
         final List<CourseStudentValidationIssue> errors = new ArrayList<>();
 
         if (StringUtils.isNotBlank(student.getCourseYear()) && StringUtils.isNotBlank(student.getCourseMonth())) {
             try {
                 YearMonth courseSession = YearMonth.of(Integer.parseInt(student.getCourseYear()), Integer.parseInt(student.getCourseMonth()));
-                YearMonth currentDate = YearMonth.now();
-                // refer to v218 - final percentage before 199409 must be blank
+
                 YearMonth cutoffDate = YearMonth.of(1994, 9);
 
-                if (courseSession.isBefore(currentDate) && (StringUtils.isBlank(student.getFinalGrade()) || (courseSession.isAfter(cutoffDate) && StringUtils.isBlank(student.getFinalPercentage())))) {
-                    log.debug("V224: Error: Course session has passed with no final mark. Report final mark or change the course session date. This course will not be updated. for courseStudentID :: {}", student.getCourseStudentID());
-                    errors.add(createValidationIssue(StudentValidationIssueSeverityCode.ERROR, CourseStudentValidationFieldCode.FINAL_LETTER_GRADE_PERCENTAGE, CourseStudentValidationIssueTypeCode.FINAL_LETTER_GRADE_OR_PERCENT_BLANK, CourseStudentValidationIssueTypeCode.FINAL_LETTER_GRADE_OR_PERCENT_BLANK.getMessage()));
+                if (courseSession.isBefore(cutoffDate) && !student.getFinalPercentage().isBlank()) {
+                    log.debug("V219: Error: For course session dates prior to 199409 the final percent must be blank. This course will not be updated. for courseStudentID :: {}", student.getCourseStudentID());
+                    errors.add(createValidationIssue(StudentValidationIssueSeverityCode.ERROR, CourseStudentValidationFieldCode.FINAL_PCT, CourseStudentValidationIssueTypeCode.FINAL_PCT_NOT_BLANK, CourseStudentValidationIssueTypeCode.FINAL_PCT_NOT_BLANK.getMessage()));
                 }
             } catch (NumberFormatException | DateTimeException e) {
-                log.debug("V224: Skipping validation due to invalid course year or month for courseStudentID :: {}", student.getCourseStudentID());
+                log.debug("V219: Skipping validation due to invalid course year or month for courseStudentID :: {}", student.getCourseStudentID());
+                errors.add(createValidationIssue(StudentValidationIssueSeverityCode.ERROR, CourseStudentValidationFieldCode.FINAL_PCT, CourseStudentValidationIssueTypeCode.FINAL_PCT_NOT_BLANK, CourseStudentValidationIssueTypeCode.FINAL_PCT_NOT_BLANK.getMessage()));
             }
         }
         return errors;
     }
+
 }
